fix: register new device, logout and report damage
